--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body,html {
 
 .my-col-3 {
     width: 300px;
-    height: 80vh;
+    height: 600px;
 }
 
 .context {
@@ -236,7 +236,7 @@ body,html {
     display: none;
     margin-right: 0px;
     width: 200px;
-    height: 80vh;
+    height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
